@@ -10,7 +10,8 @@ a:active	{text-decoration:none; color:#FFAB5E;}
 */
 
 
-.activity, .org				{width:960px; margin:0 auto; padding:40px 40px 1px 40px; background-color:rgba(0,14,32,0.7); border-radius:6px; position:relative; margin-bottom:40px;}
+.activity, .org				{width:960px; margin:0 auto; padding:40px 40px 1px 40px; background-color:rgba(0,14,32,0.7); border-radius:8px; position:relative; margin-bottom:40px; box-sizing:border-box;}
+.activity > *, .org > *		{box-sizing:border-box;}
 .activity:nth-of-type(2)	{display:none;}
 
 /*	FLAGS	*/
@@ -20,7 +21,7 @@ a:active	{text-decoration:none; color:#FFAB5E;}
 .header,
 .header_doc	{font-size:14px; color:#ccc; text-transform:uppercase; display:block; border-bottom:1px solid #aaa; padding-bottom:10px; margin-bottom:20px;}
 .header_doc	{border:0; margin:0;}
-.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:980px; text-transform:uppercase;}
+.header_section	{font-size:12px; color:#FFF; background-color:rgba(17,46,105,0.9); padding:10px 40px; margin:0 0 20px -50px; width:900px; text-transform:uppercase;}
 .sticky		{position:sticky; top:-1px; z-index:2;}
 .nostick	{position:initial;}
 span.block	{display:block;}
@@ -86,7 +87,7 @@ span.count				{color:#ccc; font-size:12px; padding-left:20px;}
 
 /*	DOCUMENTS	*/
 a.doc_link:before	{display:inline-block; vertical-align:top; content:"☰"; border:1px solid #CCC; padding:2px; color:#CCC; margin-right:-24px;}
-a.doc_link			{display:block; width:100%; padding:10px 15px; font-size:10px; line-height:1.25em; position:relative; color:#FFF; background-color:rgba(50,58,64,0.6); border:1px solid #656a6f; border-bottom:0;}
+a.doc_link			{display:block; padding:10px 15px; font-size:10px; line-height:1.25em; position:relative; color:#FFF; background-color:rgba(50,58,64,0.6); border:1px solid #656a6f; border-bottom:0;}
 a.doc_link:hover	{background-color:rgba(77,88,97,0.6);}
 a.doc_link:last-of-type	{border-bottom:1px solid #656a6f;}
 
@@ -139,7 +140,7 @@ table.budget td.status	{text-align:right;}
 
 
 table.budget tr:nth-of-type(1) td	{padding-top:15px;}
-table.budget tr:nth-of-type(1) th	{position:sticky; top:32px; z-index:1; background-color:#152136f2; padding:10px 0;}
+table.budget tr:nth-of-type(1) th	{position:sticky; top:30px; z-index:1; background-color:#1c252fe8; padding:10px 0;}
 table.budget tr:nth-of-type(1) th:after	{content:''; position:absolute; left:0; bottom:-1px; width:100%; border-bottom:1px solid #aaa;}
 table.part_org td:nth-of-type(1),
 table.location td:nth-of-type(1)	{font-size:16px;}
@@ -172,6 +173,13 @@ table.budget tr:last-of-type td		{border:0; padding-bottom:30px;}	/*	Remove bord
 .wrap_recipient_budget table.budget th.status,
 .wrap_recipient_budget table.budget td.status		{width:100px; padding-right:0;}
 
+.wrap_total_budget table.budget th.status,
+.wrap_total_budget table.budget td.status,
+.wrap_total_expenditure table.budget th.status,
+.wrap_total_expenditure table.budget td.status,
+.wrap_recipient_budget table.budget th.status,
+.wrap_recipient_budget table.budget td.status		{text-align:center;}
+
 /*	RECIPIENT COLUMN	*/
 .wrap_recipient_budget table.budget th.recipient,
 .wrap_recipient_budget table.budget td.recipient	{width:180px; padding-right:20px;}
@@ -182,20 +190,20 @@ table.budget tr:last-of-type td		{border:0; padding-bottom:30px;}	/*	Remove bord
 
 /*	RECIPIENT-BUDGET-LINE COLUMN	*/
 .wrap_recipient_budget table.budget th.line,
-.wrap_recipient_budget table.budget td.line			{width:280px; padding-right:0;}
+.wrap_recipient_budget table.budget td.line			{width:260px; padding-right:0;}
 
 /*	EXPENSE-LINE COLUMN	*/
 .wrap_total_expenditure table.budget th.line,
-.wrap_total_expenditure table.budget td.line		{width:560px; padding-right:20px;}
+.wrap_total_expenditure table.budget td.line		{width:460px; padding-right:0px;}
 
 /*	VALUE HEADER COLUMN	*/
+.wrap_total_expenditure table.budget th.value		{width:200px; padding-right:20px;}
 .wrap_total_budget table.budget th.value,
-.wrap_total_expenditure table.budget th.value,
-.wrap_recipient_budget table.budget th.value		{width:120px; padding-right:20px;}
+.wrap_recipient_budget table.budget th.value		{width:120px; padding-right:0px;}
 
 /*	VALUE COLUMN	*/
+.wrap_total_expenditure table.budget td.value		{width:200px; padding-right:0; padding-left:20px;}
 .wrap_total_budget table.budget td.value,
-.wrap_total_expenditure table.budget td.value,
 .wrap_recipient_budget table.budget td.value		{width:120px; padding-right:0; padding-left:20px;}
 
 
